--- a/settings.json
+++ b/settings.json
@@ -1,16 +1,16 @@
 {
      "prefix": "!",
-     "namalu" : "ZeilBotz",
-     "nomerlu": "6281376900646",
-     "namabot": "ZeilBotz",
-     "nomerbot": "6281376900646",
+     "namalu" : "Yahaha wahyu",
+     "nomerlu": "6281357441144",
+     "namabot": "Rizky.com",
+     "nomerbot": "6281252780930",
      "gender" : "Cowo",
-     "copyright" : "ZeilBotz",
+     "copyright" : "rizky.com",
      "Shopee" : "_•",
-     "Gopay" : "+081376900646",
-     "Dana" : "+081376900646",
-     "Ovo" : "+081376900646",
-     "namaDocument": "ZeilBotz",
+     "Gopay" : "+0",
+     "Dana" : "+0",
+     "Ovo" : "+0",
+     "namaDocument": "rizky.com",
      "joinGcExtream": true,
      "Anticall": true,
      "multi": true,
